# rust-counter-program

./: .gitignore  Cargo.toml  README.md  package.json
client/: index.ts  initializeKeypair.ts
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: rust-counter.ts  schema.ts
