[package]
name = "rust_counter_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
solana-program = "1.15.2"

[lib]
name = "rust_counter_program"
crate-type = ["cdylib", "lib"]
